# gtk-shell

./: CMakeLists.txt  README.md  configure.ac
cmake/: Wayland.cmake
cmake/vala/: FindVala.cmake  UseVala.cmake
plugins/: CMakeLists.txt
plugins/background/: CMakeLists.txt  background.plugin  background_plugin.vala
plugins/panel/: CMakeLists.txt  panel.plugin  panel_plugin.vala
shell/: Makefile.am  consort-shell-private.h  consort-shell.c  consort-shell.h  gtk-shell.c  gtk-shell.h  shell-main.c
